--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "start": "node backend/server.js",
     "server": "nodemon backend/server.js",
-    "client": "npm start --prefix frontend"
+    "client": "npm start --prefix frontend",
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "author": "",
   "license": "ISC",
@@ -21,6 +22,7 @@
   },
   "type": "module",
   "devDependencies": {
+    "concurrently": "^7.6.0",
     "i": "^0.3.7",
     "nodemon": "^2.0.20"
   }
